feat(tmux): add theme

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -58,5 +58,8 @@ set -g @catppuccin_flavour 'mocha' # or frappe, macchiato, mocha
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
 
+source ~/.config/tmux/theme.conf
+source ~/.config/tmux/statusline.conf
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
