fix(tmux): reduce limit history and status interval

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,6 +8,12 @@ set -g prefix C-s
 # make delay shorter
 set -g escape-time 0
 
+# reduce history-limit
+set -g history-limit 10000
+
+# reduce status interval
+set -g status-interval 15 
+
 # Enable mouse support
 set -g mouse on
 
