--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,8 +27,27 @@ bind - split-window -v
 bind-key g display-popup -w "80%" -h "80%" -d "#{pane_current_path}" -E "lazygit"
 
 # Copy tmux's clipboard to system clipboard
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
-bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+# bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+# bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+
+# copy mode
+bind-key -T copy-mode-vi 'y' send -X copy-selection
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'C-v' send -X rectangle-toggle
+
+bind-key -T copy-mode-vi Escape send-keys -X clear-selection
+
+unbind-key -T copy-mode-vi MouseDragEnd1Pane
+
+bind-key -T copy-mode-vi DoubleClick1Pane select-pane \; send-keys -X select-word
+bind-key -T root DoubleClick1Pane select-pane -t = \; \
+	if-shell -F "#{||:#{pane_in_mode},#{mouse_any_flag}}" \
+		{ send-keys -M } { copy-mode -H ; send-keys -X select-word }
+
+bind-key -T copy-mode-vi TripleClick1Pane select-pane \; send-keys -X select-line
+bind-key -T root TripleClick1Pane select-pane -t = \; \
+	if-shell -F "#{||:#{pane_in_mode},#{mouse_any_flag}}" \
+		{ send-keys -M } { copy-mode -H ; send-keys -X select-line }
 
 # Set new panes to open in current directory
 bind c new-window -c "#{pane_current_path}"
